tests/NormalTests/paczka1/small_fuzzy/49102254.err
Error in line 2: a5TW S655 30,5
Error in line 8: a5TW A910 78,9
